refactor: ITP-224
