# controllers/historyController.js
@@ -29,4 +29,24 @@ export const userHistory = async (req, res) => {
     }
 };
 
-
+export const quizHistory = async (req, res) => {
+    console.log('req.params.id:', req.params.quizId);
+    try {
+        const quiz = await prisma.quizzes.findUnique({
+            where: { id: req.params.quizId },
+            include: {
+                questions: {
+                    include: {
+                        user_responses: true
+                    }
+                }
+            }
+        });
+        if (!quiz) {
+            return res.status(404).json({ error: 'Quiz not found' });
+        }
+        res.json(quiz);
+    } catch (error) {
+        res.status(500).json({ error: error.message });
+    }
+};
