# routes/historyRoutes.js
@@ -1,8 +1,10 @@
 import {isAuthenticated} from "../middlewares/isAuthenticated.js";
 import {
+    quizHistory,
     userHistory
 } from '../controllers/historyController.js';
 
 export default (app) => {
     app.get('/quizzes', isAuthenticated, userHistory);
+    app.get('/quizzes/:quizId', isAuthenticated, quizHistory);
 };
